wdb-gribload (1.0.2-1) lucid; urgency=medium

  * Implemented limited GRIB2 support in the game. Tested with hpc
    forecast precipitation fields (NOAA).
    
  * Metadata implemented separately for GRIB1 and GRIB2 fields.
  
  * Install tests updated to use code tables from ECMWF. This is done
    to minimize clashes with other metadata.

 -- Michael Akinde <wdb@met.no>  Thu, 17 Mar 2011 12:00:00 +0000

wdb-gribload (1.0.1-1) lucid; urgency=low

  * Metadata changes to add dew point temperature (98, 128, 168).

 -- Michael Akinde <wdb@met.no>  Thu, 17 Mar 2011 12:00:00 +0000

wdb-gribload (1.0.0-1) lucid; urgency=high

  * Release version of WDB 1.0.0.

 -- Michael Akinde <wdb@met.no>  Wed, 09 Mar 2011 12:00:00 +0000

wdb-gribload (1.0.0~rc3-1) lucid; urgency=low

  * Fixed parameters defined as percent instead of ratio. 

 -- Michael Akinde <wdb@met.no>  Thu, 03 Mar 2011 15:00:00 +0000

wdb-gribload (1.0.0~rc2-1) lucid; urgency=low

  * Updated metadata for GRIB parameter 248. 

 -- Michael Akinde <wdb@met.no>  Wed, 02 Mar 2011 15:00:00 +0000

wdb-gribload (1.0.0~rc1-1) lucid; urgency=low

  * New version (wdb). Metadata update. 

 -- Michael Akinde <wdb@met.no>  Tue, 25 Jan 2011 15:00:00 +0000

wdb-gribload (0.9.7-1) hardy; urgency=low

  * New version (wdb) 

 -- Michael Akinde <wdb@met.no>  Mon, 07 Jun 2010 10:54:15 +0200

wdb-gribload (0.9.6-4) hardy; urgency=low

  * final build

 -- Vegard Bønes <wdb@met.no>  Fri, 05 Feb 2010 15:02:45 +0000

wdb-gribload (0.9.5-2) hardy; urgency=low

  * Fixed gribapi dependency

 -- Vegard Bønes <wdb@met.no>  Fri, 06 Nov 2009 13:35:10 +0000

wdb-gribload (0.9.5-1) hardy; urgency=low

  * New version

 -- Vegard Bønes <wdb@met.no>  Fri, 06 Nov 2009 13:31:00 +0000

wdb-gribload (0.9.4-3) hardy; urgency=low

  * fixing broken build

 -- Vegard Bønes <wdb@met.no>  Thu, 10 Sep 2009 06:59:24 +0000

wdb-gribload (0.9.4-2) hardy; urgency=low

  * bugfixes

 -- Vegard Bønes <wdb@met.no>  Tue, 01 Sep 2009 12:55:21 +0000
