@@ -10,4 +10,5 @@
    98, 137 = ecmwf atmospheric 36r2   
    98, 138 = ecmwf atmospheric 36r3
    98, 139 = ecmwf atmospheric 36r4
+   98, 140 = ecmwf atmospheric 37r2
    98, 254 = test gribload               
